adicionado todas a imagens e textos que tem no figma, e ajustando no css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Memory BP</title>
 </head>
 <body>
+    <!--
+
+ter sobre a scola
+sobre os cursos
+sala de aula e como é a bnt
+sobre os profesores
+o almoco cantina em geral
+a direcao
+estrutura da escola? isso eu seo sei.
+
+-->
+
     <div class="container">
-        <h1>Hello World!!!</h1>
-        <p>trabalho de base tecnica da materia progamao para web II</p>
+
+        <header>
+            <div class="degrade"></div>
+        <img src="./entrada-escola.png" alt="entrada do iema pleno bacelar portela">
+
+        <img src="logoiema 1.png" alt="logo oficial do iema">
+        <nav>
+        <p>Inicio</p>
+        <p>Quem somos</p>
+        <p>Cursos</p>
+        <p>seguimentos</p>
+        <p>serviços</p>
+        </nav>
+        </header>
 
 
-        <h4>oi isadora lero lero</h4>
+
+        <div class="rectangle"></div>
+        <img src="./patio.png" alt="lado esquerdo do patio da escola">
+        <h1>Quem somos</h1>
+        <p>A Escola Dr. João Bacelar Portela é uma instituição estadual de Ensino Médio com foco em Educação Profissional. Possui infraestrutura moderna e acessível, com salas climatizadas, biblioteca, auditório, laboratórios, cozinha, refeitório, banheiros adaptados e pátios, garantindo um ambiente completo e inclusivo para os estudantes.</p>
+
+
+        
+
+
+
 
 
 
