em processo, sinto que estou evoluindo em sites, gosto de fazer e tals... mas é estressante. bom nesse commmit eu estou enviando as alteracoes do slide e da flex box que o professor william me aconselhou a usar

--- a/index.html
+++ b/index.html
@@ -31,13 +31,59 @@
 
      <div class="degrade"></div>
 
-
-    <div class="conteudo">
-        <h1>Quem Somos?</h1>
+<div class="conteudo">
+    <div class="imagem-com-elipse">
         <img class="img_1" src="./patio.png" alt="Imagem do pátio da escola">
-        <img class="img_2" src="./Ellipse-1.png" alt="Ellipse azul">
+        <img class="elipse" src="./Ellipse_1.png" alt="Ellipse azul">
+    </div>
+    <div class="info">
+        <h1>Quem Somos?</h1>
         <p>O IEMA Pleno Barcelar Portela oferece uma formação de qualidade, unindo ensino integral e técnico. A escola prepara os alunos tanto para o ingresso no mercado de trabalho quanto para a continuidade dos estudos, por meio de estágios que fortalecem suas habilidades práticas e profissionais.</p>
     </div>
-        
-</body>
+</div>
+
+
+ <div class="slideshow-container">
+        <div class="slide active">
+            <div class="slide_informatica">
+                <img src="./lab.informatica.png" alt="Imagem do laboratório de informática para internet">
+                <img src="./Ellipse_2.png" alt="Elipse amarela">
+                <h2>Informática para Internet</h2>
+                <p>O curso técnico em Informática oferece uma formação prática em design e programação. Nele, o aluno aprende a criar interfaces usando o Figma e desenvolve sites e sistemas com linguagens como HTML, CSS, JavaScript e Python.</p>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide_mecanica">
+                <img src="./lab.mecanica.png" alt="Imagem do laboratório de mecânica">
+                <img src="./Ellipse_3.png" alt="Elipse amarela">
+                <h2>Mecânica</h2>
+                <p>O curso Técnico em Mecânica forma profissionais para atuar na produção, operação e manutenção de máquinas e sistemas mecânicos. O aluno aprende a interpretar desenhos técnicos e aplicar normas de segurança.</p>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide_edificacoes">
+                <img src="" alt="Imagem do laboratório de edificações">
+                <img src="./Ellipse_4.png" alt="Elipse amarela">
+                <h2>Edificações</h2>
+                <p>O curso Técnico em Edificações prepara profissionais para atuar no planejamento, execução e fiscalização de obras civis. O aluno aprende sobre projetos arquitetônicos, materiais e normas técnicas.</p>
+            </div>
+        </div>
+
+        <div class="slide">
+            <div class="slide_eletromecanica">
+                <img src="" alt="Imagem do laboratório de eletromecânica">
+                <img src="./Ellipse_5.png" alt="Elipse amarela">
+                <h2>Eletromecânica</h2>
+                <p>O curso de Eletromecânica forma profissionais para atuar na instalação, operação e manutenção de sistemas com componentes elétricos e mecânicos. O foco é prático e voltado à indústria.</p>
+            </div>
+        </div>
+
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+    </div>
+
+    <script src="carousel.js"></script>
+</body> 
 </html>
