apaguei muita coisa do css e recoloquei as imagens

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   </div>
 
   <div class="conteudo">
-    <div class="imagem-com-elipse">
+    <div class="inicio">
       <img class="img_1" src="./patio.png" alt="Imagem do pátio da escola" />
-      <img class="elipse" src="./Ellipse_1.png" alt="Ellipse azul" />
     </div>
     <div class="info">
       <h1>Quem Somos?</h1>
@@ -36,46 +35,93 @@
     </div>
   </div>
 
+
+
+
+
+
+
+
+
+
+
   <div class="slideshow-container">
     <div class="slide active">
       <div class="slide_informatica">
         <img src="./lab.informatica.png" alt="Laboratório de informática" />
-        <img src="./Ellipse_2.png" alt="Elipse amarela" />
-        <h2>Informática para Internet</h2>
-        <p>Curso com foco em design, programação (HTML, CSS, JS, Python) e criação de interfaces com Figma.</p>
+        <div>
+          <h2>Informática para Internet</h2>
+          <p>O curso técnico em Informática oferece uma formação prática em design e programação. Nele, o aluno aprende a criar interfaces usando o Figma e desenvolve sites e sistemas com linguagens como HTML, CSS, JavaScript e Python. É uma preparação completa para atuar em diversas áreas da tecnologia.</p>
+        </div>
       </div>
     </div>
 
     <div class="slide">
-      <div class="slide_mecanica">
+      <div class="slide_mecânica">
         <img src="./lab.mecanica.png" alt="Laboratório de mecânica" />
-        <img src="./Ellipse_3.png" alt="Elipse amarela" />
-        <h2>Mecânica</h2>
-        <p>Curso técnico voltado à operação e manutenção de sistemas mecânicos, com forte base prática.</p>
+        <div>
+          <h2>Mecânica</h2>
+          <p>O curso Técnico em Mecânica forma profissionais para atuar na produção, operação e manutenção de máquinas e sistemas mecânicos. O aluno aprende a interpretar desenhos técnicos, usinar peças, operar equipamentos e aplicar normas de segurança. É uma formação prática, com ampla demanda na indústria e excelentes oportunidades no mercado de trabalho.</p>
+        </div>
       </div>
     </div>
 
     <div class="slide">
       <div class="slide_edificacoes">
-        <img src="./lab.edificacoes.png" alt="Laboratório de edificações" />
-        <img src="./Ellipse_4.png" alt="Elipse amarela" />
-        <h2>Edificações</h2>
-        <p>Curso que prepara para atuar em obras civis, com aprendizado em projetos, topografia e segurança.</p>
+        <img src="./lab.edificaçoes.png" alt="Laboratório de edificações" />
+        <div>
+          <h2>Edificações</h2>
+          <p>O curso Técnico em Edificações prepara profissionais para atuar no planejamento, execução e fiscalização de obras civis. O aluno aprende sobre projetos arquitetônicos, materiais de construção, topografia, desenho técnico e normas de segurança. Com forte base prática, o curso oferece diversas oportunidades no setor da construção civil, em empresas públicas e privadas.</p>
+        </div>
       </div>
     </div>
 
     <div class="slide">
       <div class="slide_eletromecanica">
-        <img src="./lab.eletromecanica.png" alt="Laboratório de eletromecânica" />
-        <img src="./Ellipse_5.png" alt="Elipse amarela" />
-        <h2>Eletromecânica</h2>
-        <p>Instalação, operação e manutenção de sistemas elétricos e mecânicos, com foco em automação industrial.</p>
+        <img src="./lab.mecanica.png" alt="Laboratório de eletromecânica" />
+        <div>
+          <h2>Eletromecânica</h2>
+          <p>O curso de Eletromecânica forma profissionais para atuar na instalação, operação e manutenção de sistemas que envolvem componentes elétricos e mecânicos. Com foco prático, o aluno aprende sobre elétrica, mecânica e automação. É uma área com boa demanda no mercado, principalmente na indústria.</p>
+        </div>
       </div>
-    </div>
+    </div> 
 
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+  <div class="info_protagonismo">
+    <div class="box-1">
+      <img src="./Group 7.png" alt="foto oficial dos protagonista do eima pleno bacelar portela">
+      <p>Os alunos do IEMA se destacam por protagonismo em projetos sociais, inovação, inclusão e competições internacionais, mostrando liderança, criatividade e preparo para o futuro.</p>
+    </div>
+
+    <div class="box-2">
+      <h1>Alunos protagonistas</h1>
+      <img src="./ptgnt.1.png" alt="">
+      <img src="./ptgnt.2.png" alt="">
+      <img src="./ptgnt.3.png" alt="">
+      <img src="./ptgnt.4.png" alt="">
+      <img src="./ptgnt.5.png" alt="">
+      <img src="./ptgnt.6.png" alt="">
+    </div>
+
+  </div>
+
+
+
+
+
 
   <script src="carousel.js"></script>
 </body>
