apenas ajustes tecnicos dessa vez nada de grande

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <div class="info_protagonismo">
     <div class="box-1">
-      <img src="./Group 7.png" alt="foto oficial dos protagonista do eima pleno bacelar portela">
+      <img src="./protagonistas.bp.png" alt="foto oficial dos protagonista do eima pleno bacelar portela">
       <p>Os alunos do IEMA se destacam por protagonismo em projetos sociais, inovação, inclusão e competições internacionais, mostrando liderança, criatividade e preparo para o futuro.</p>
     </div>
 
