area de protagonismo feita

--- a/index.html
+++ b/index.html
@@ -86,20 +86,21 @@
       </div>
     </div> 
 
+     <div class="slide">
+      <div class="slide_eletrotecina">
+        <img src="./lab.mecanica.png" alt="Laboratório de eletrotecinica" />
+        <div>
+          <h2>eletrotécinica</h2>
+          <p>O curso de Eletrotécnica forma profissionais para atuar na instalação, operação e manutenção de sistemas elétricos em baixa e média tensão. Com foco prático, o aluno aprende sobre comandos elétricos, máquinas, instalações e distribuição de energia. É uma área com boa demanda, principalmente na indústria, construção civil e empresas de energia.</p>
+        </div>
+      </div>
+    </div> 
+
+
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
   </div>
-
-
-
-
-
-
-
-
-
-
-
+  
   <div class="info_protagonismo">
     <div class="box-1">
       <img src="./protagonistas.bp.png" alt="foto oficial dos protagonista do eima pleno bacelar portela">
@@ -107,16 +108,23 @@
     </div>
 
     <div class="box-2">
-      <h1>Alunos protagonistas</h1>
-      <img src="./ptgnt.1.png" alt="">
-      <img src="./ptgnt.2.png" alt="">
-      <img src="./ptgnt.3.png" alt="">
-      <img src="./ptgnt.4.png" alt="">
-      <img src="./ptgnt.5.png" alt="">
-      <img src="./ptgnt.6.png" alt="">
+      <div>
+        <h1>Alunos protagonistas</h1>
+      </div>
+      <div class="prot1">
+        <img src="./ptgnt.1.png" alt="">
+        <img src="./ptgnt.2.png" alt="">
+        <img src="./ptgnt.3.png" alt="">
+      </div>
+      <div class="prot1">
+        <img src="./ptgnt.4.png" alt="">
+        <img src="./ptgnt.5.png" alt="">
+        <img src="./ptgnt.6.png" alt="">
+      </div>
     </div>
 
   </div>
+
 
 
 
