--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Memory-BP</title>
   <link rel="icon" type="image/png" href="./assets/logo_Bacelar_Portela.png">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/mediaquery.css">
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -147,21 +151,6 @@
     </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <h2>Projetos</h2>
   <div class="slideshow-container" id="slideshow-projetos">
     <div class="slide active">
@@ -188,19 +177,6 @@
     <button class="next">&#10095;</button>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-  
   <script src="carousel.js"></script>
 </body>
 </html>
