--- a/index.html
+++ b/index.html
@@ -217,15 +217,14 @@
 
       <div class="rodape-mapa">
         <h3>Localização</h3>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.5167309469955!2d-44.29819728458819!3d-2.522198237945032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68f25bdc07fca%3A0x819db1e14b1b1d68!2sIEMA%20Pleno%20Bacelar%20Portela!5e0!3m2!1spt-BR!2sbr!4v1686310583206!5m2!1spt-BR!2sbr"
-          width="250"
-          height="200"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+ <iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3985.8890622714835!2d-44.26783172527226!3d-2.543032997435305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7f68f0e2b1d606f%3A0xe64a013921b7cc57!2sIEMAPLENO%20DR.%20JO%C3%83O%20BACELAR%20PORTELA!5e0!3m2!1spt-BR!2sbr!4v1749427268170!5m2!1spt-BR!2sbr" width="600"
+  height="450"
+   style="border:0;"
+    allowfullscreen="" 
+    loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+
       </div>
     </div>
   </footer>
