--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="slide">
         <div class="slide_edificacoes">
-          <img src="./assets/lab.edificacoes.png" alt="Laboratório de edificações" />
+          <img src="./assets/lab.edificaçoes.png" alt="Laboratório de edificações" />
           <div>
             <h2>Edificações</h2>
             <p>O curso Técnico em Edificações prepara profissionais para atuar no planejamento, execução e fiscalização de obras civis. O aluno aprende sobre projetos arquitetônicos, materiais de construção, topografia, desenho técnico e normas de segurança. Com forte base prática, o curso oferece diversas oportunidades no setor da construção civil, em empresas públicas e privadas.</p>
@@ -230,6 +230,6 @@
   </footer>
 
 
-  <script src="./scripts/slideshow.js"></script>
+  <script src="./carousel.js"></script>
 </body>
 </html>
