--- a/index.html
+++ b/index.html
@@ -45,63 +45,96 @@
     </div>
   </section>
 
-  <!-- CURSOS -->
-  <section id="cursos">
-    <div class="slideshow-container" id="slideshow-cursos">
-      <div class="slide active">
-        <div class="slide_informatica">
-          <img src="./assets/lab.informatica.png" alt="Laboratório de informática" />
-          <div>
-            <h2>Informática para Internet</h2>
-            <p>O curso técnico em Informática oferece uma formação prática em design e programação. Nele, o aluno aprende a criar interfaces usando o Figma e desenvolve sites e sistemas com linguagens como HTML, CSS, JavaScript e Python. É uma preparação completa para atuar em diversas áreas da tecnologia.</p>
-          </div>
-        </div>
-      </div>
+<!-- CURSOS -->
+<section id="cursos">
+  <div class="slideshow-container" id="slideshow-cursos">
+<div class="slide active">
+  <div class="slide_informatica">
+    <img src="./assets/lab.informatica.png" alt="Laboratório de informática" />
+    <div class="info-texto">
+      <h2>Informática para Internet</h2>
+      <p>
+        O curso técnico em Informática oferece uma formação prática em design e programação.
+        Nele, o aluno aprende a criar interfaces usando o Figma e desenvolve sites e sistemas
+        com linguagens como HTML, CSS, JavaScript e Python. É uma preparação completa para atuar
+        em diversas áreas da tecnologia.
+      </p>
 
-      <div class="slide">
-        <div class="slide_mecanica">
-          <img src="./assets/lab.mecanica.png" alt="Laboratório de mecânica" />
-          <div>
-            <h2>Mecânica</h2>
-            <p>O curso Técnico em Mecânica forma profissionais para atuar na produção, operação e manutenção de máquinas e sistemas mecânicos. O aluno aprende a interpretar desenhos técnicos, usinar peças, operar equipamentos e aplicar normas de segurança. É uma formação prática, com ampla demanda na indústria e excelentes oportunidades no mercado de trabalho.</p>
-          </div>
-        </div>
+      <!-- Miniaturas redondas -->
+      <div class="info-gallery">
+        <img src="./assets/info1.png" alt="Imagem informática 1" />
+        <img src="./assets/info2.png" alt="Imagem informática 2" />
+        <img src="./assets/info3.png" alt="Imagem informática 3" />
       </div>
-
-      <div class="slide">
-        <div class="slide_edificacoes">
-          <img src="./assets/lab.edificaçoes.png" alt="Laboratório de edificações" />
-          <div>
-            <h2>Edificações</h2>
-            <p>O curso Técnico em Edificações prepara profissionais para atuar no planejamento, execução e fiscalização de obras civis. O aluno aprende sobre projetos arquitetônicos, materiais de construção, topografia, desenho técnico e normas de segurança. Com forte base prática, o curso oferece diversas oportunidades no setor da construção civil, em empresas públicas e privadas.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="slide">
-        <div class="slide_eletromecanica">
-          <img src="./assets/lab.mecanica.png" alt="Laboratório de eletromecânica" />
-          <div>
-            <h2>Eletromecânica</h2>
-            <p>O curso de Eletromecânica forma profissionais para atuar na instalação, operação e manutenção de sistemas que envolvem componentes elétricos e mecânicos. Com foco prático, o aluno aprende sobre elétrica, mecânica e automação. É uma área com boa demanda no mercado, principalmente na indústria.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="slide">
-        <div class="slide_eletrotecnica">
-          <img src="./assets/lab.mecanica.png" alt="Laboratório de eletrotécnica" />
-          <div>
-            <h2>Eletrotécnica</h2>
-            <p>O curso de Eletrotécnica forma profissionais para atuar na instalação, operação e manutenção de sistemas elétricos em baixa e média tensão. Com foco prático, o aluno aprende sobre comandos elétricos, máquinas, instalações e distribuição de energia. É uma área com boa demanda, principalmente na indústria, construção civil e empresas de energia.</p>
-          </div>
-        </div>
-      </div>
-
-      <button class="prev">&#10094;</button>
-      <button class="next">&#10095;</button>
     </div>
-  </section>
+  </div>
+</div>
+
+
+    <div class="slide">
+      <div class="slide_mecanica">
+        <img src="./assets/lab.mecanica.png" alt="Laboratório de mecânica" />
+        <div class="info-texto">
+          <h2>Mecânica</h2>
+          <p>O curso Técnico em Mecânica forma profissionais para atuar na produção, operação e manutenção de máquinas e sistemas mecânicos. O aluno aprende a interpretar desenhos técnicos, usinar peças, operar equipamentos e aplicar normas de segurança. É uma formação prática, com ampla demanda na indústria e excelentes oportunidades no mercado de trabalho.</p>
+          <div class="info-gallery">
+            <img src="./assets/mec1.png" alt="Imagem mecânica 1" />
+            <img src="./assets/mec2.png" alt="Imagem mecânica 2" />
+            <img src="./assets/mec3.png" alt="Imagem mecânica 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="slide_edificacoes">
+        <img src="./assets/lab.edificaçoes.png" alt="Laboratório de edificações" />
+        <div class="info-texto">
+          <h2>Edificações</h2>
+          <p>O curso Técnico em Edificações prepara profissionais para atuar no planejamento, execução e fiscalização de obras civis. O aluno aprende sobre projetos arquitetônicos, materiais de construção, topografia, desenho técnico e normas de segurança. Com forte base prática, o curso oferece diversas oportunidades no setor da construção civil, em empresas públicas e privadas.</p>
+          <div class="info-gallery">
+            <img src="./assets/edif1.png" alt="Imagem edificações 1" />
+            <img src="./assets/edif2.png" alt="Imagem edificações 2" />
+            <img src="./assets/edif3.png" alt="Imagem edificações 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="slide_eletromecanica">
+        <img src="./assets/lab.eletromecanica.png" alt="Laboratório de eletromecânica" />
+        <div class="info-texto">
+          <h2>Eletromecânica</h2>
+          <p>O curso de Eletromecânica forma profissionais para atuar na instalação, operação e manutenção de sistemas que envolvem componentes elétricos e mecânicos. Com foco prático, o aluno aprende sobre elétrica, mecânica e automação. É uma área com boa demanda no mercado, principalmente na indústria.</p>
+          <div class="info-gallery">
+            <img src="./assets/eletromec1.png" alt="Imagem eletromecânica 1" />
+            <img src="./assets/eletromec2.png" alt="Imagem eletromecânica 2" />
+            <img src="./assets/eletromec3.png" alt="Imagem eletromecânica 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slide">
+      <div class="slide_eletrotecnica">
+        <img src="./assets/lab.eletrotecnica.png" alt="Laboratório de eletrotécnica" />
+        <div class="info-texto">
+          <h2>Eletrotécnica</h2>
+          <p>O curso de Eletrotécnica forma profissionais para atuar na instalação, operação e manutenção de sistemas elétricos em baixa e média tensão. Com foco prático, o aluno aprende sobre comandos elétricos, máquinas, instalações e distribuição de energia. É uma área com boa demanda, principalmente na indústria, construção civil e empresas de energia.</p>
+          <div class="info-gallery">
+            <img src="./assets/eletrotec1.png" alt="Imagem eletrotécnica 1" />
+            <img src="./assets/eletrotec2.png" alt="Imagem eletrotécnica 2" />
+            <img src="./assets/eletrotec3.png" alt="Imagem eletrotécnica 3" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+  </div>
+</section>
 
   <!-- SEGMENTOS -->
   <section id="segmentos">
